태그 사용하기 튜토리얼 진행 완료

--- a/hello-world-using-struts-2/helloworld-struts/pom.xml
+++ b/hello-world-using-struts-2/helloworld-struts/pom.xml
@@ -144,13 +144,16 @@
                 <configuration>
                     <webApp>
                         <contextPath>/${project.build.finalName}</contextPath>
+                        <sessionHandler>
+                            <sessionIdPathParameterName>none</sessionIdPathParameterName>
+                        </sessionHandler>
                     </webApp>
                     <stopKey>CTRL+C</stopKey>
                     <stopPort>8999</stopPort>
                     <scanIntervalSeconds>10</scanIntervalSeconds>
                     <scanTargets>
                         <scanTarget>src/main/webapp/WEB-INF/web.xml</scanTarget>
-                    </scanTargets>
+                    </scanTargets>                   
                 </configuration>
             </plugin>
         </plugins>
