--- a/using-tags/using-tags-struts/pom.xml
+++ b/using-tags/using-tags-struts/pom.xml
@@ -6,12 +6,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.fp024.struts2.study</groupId>
-    <artifactId>basic-struts</artifactId>
+    <artifactId>using-tags-struts</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>basic-struts Maven Webapp</name>
-    <url>https://github.com/fp024/struts2-study/tree/master/how-to-create-a-struts-2-web-application</url>
+    <name>using-tags-struts Maven Webapp</name>
+    <url>https://github.com/fp024/struts2-study/tree/master/using-tags</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -20,6 +20,7 @@
 
         <struts2.version>2.5.26</struts2.version>
         <log4j2.version>2.14.1</log4j2.version>
+        <lombok.version>1.18.22</lombok.version>
         <junit.version>5.8.1</junit.version>
     </properties>
 
@@ -56,14 +57,17 @@
             <artifactId>struts2-core</artifactId>
         </dependency>
 
-        <!-- Log4j2 -->
+        <!-- Apache Log4j SLF4J Binding  -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
+            <artifactId>log4j-slf4j-impl</artifactId>
         </dependency>
+		
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Servlet -->
@@ -95,7 +99,7 @@
     </dependencies>
 
     <build>
-        <finalName>basic-struts</finalName>
+        <finalName>using-tags-struts</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
