--- a/hello-world-using-struts-2/helloworld-struts/pom.xml
+++ b/hello-world-using-struts-2/helloworld-struts/pom.xml
@@ -10,13 +10,13 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>helloworld-struts Maven Webapp</name>
+    <name>helloworld Struts 2 Study Maven Webapp</name>
     <url>https://github.com/fp024/struts2-study/tree/master/hello-world-using-struts-2</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
 
         <struts2.version>2.5.26</struts2.version>
         <log4j2.version>2.14.1</log4j2.version>
@@ -99,7 +99,7 @@
     </dependencies>
 
     <build>
-        <finalName>helloworld-struts</finalName>
+        <finalName>${project.artifactId}</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
