--- a/how-to-create-a-struts-2-web-application/basic-struts/pom.xml
+++ b/how-to-create-a-struts-2-web-application/basic-struts/pom.xml
@@ -10,13 +10,13 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>basic-struts Maven Webapp</name>
+    <name>basic Struts 2 Study Maven Webapp</name>
     <url>https://github.com/fp024/struts2-study/tree/master/how-to-create-a-struts-2-web-application</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
 
         <struts2.version>2.5.26</struts2.version>
         <log4j2.version>2.14.1</log4j2.version>
@@ -95,7 +95,7 @@
     </dependencies>
 
     <build>
-        <finalName>basic-struts</finalName>
+        <finalName>${project.artifactId}</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
