--- a/hello-world-using-struts-2/helloworld-struts/pom.xml
+++ b/hello-world-using-struts-2/helloworld-struts/pom.xml
@@ -10,7 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>helloworld Struts 2 Study Maven Webapp</name>
+    <name>${project.artifactId} : Struts 2 Study Maven Webapp</name>
     <url>https://github.com/fp024/struts2-study/tree/master/hello-world-using-struts-2</url>
 
     <properties>
