--- a/using-tags/using-tags-struts/pom.xml
+++ b/using-tags/using-tags-struts/pom.xml
@@ -10,7 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>using-tags Struts 2 Study Maven Webapp</name>
+    <name>${project.artifactId} : Struts 2 Study Maven Webapp</name>
     <url>https://github.com/fp024/struts2-study/tree/master/using-tags</url>
 
     <properties>
