--- a/processing-forms/processing-forms-struts/pom.xml
+++ b/processing-forms/processing-forms-struts/pom.xml
@@ -6,12 +6,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.fp024.struts2.study</groupId>
-    <artifactId>coding-actions-struts</artifactId>
+    <artifactId>processing-forms-struts</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <name>${project.artifactId} : Struts 2 Study Maven Webapp</name>
-    <url>https://github.com/fp024/struts2-study/tree/master/coding-actions</url>
+    <url>https://github.com/fp024/struts2-study/tree/master/processing-forms</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
