--- a/hello-world-using-struts-2/helloworld-struts/pom.xml
+++ b/hello-world-using-struts-2/helloworld-struts/pom.xml
@@ -22,6 +22,8 @@
         <log4j2.version>2.14.1</log4j2.version>
         <lombok.version>1.18.22</lombok.version>
 		<junit.version>5.8.1</junit.version>
+		
+        <jetty.version>9.4.44.v20210927</jetty.version>
     </properties>
 
     <dependencyManagement>
@@ -138,9 +140,10 @@
         </pluginManagement>
         <plugins>
             <plugin>
+				<!-- https://www.eclipse.org/jetty/documentation/jetty-9/index.html#jetty-maven-plugin -->
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.4.44.v20210927</version>
+                <version>${jetty.version}</version>
                 <configuration>
                     <webApp>
                         <contextPath>/${project.build.finalName}</contextPath>
@@ -153,8 +156,21 @@
                     <scanIntervalSeconds>10</scanIntervalSeconds>
                     <scanTargets>
                         <scanTarget>src/main/webapp/WEB-INF/web.xml</scanTarget>
-                    </scanTargets>                   
+                    </scanTargets>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.eclipse.jetty</groupId>
+                        <artifactId>apache-jstl</artifactId>
+                        <version>${jetty.version}</version>
+                        <exclusions>
+                            <exclusion>
+                                <groupId>org.apache.taglibs</groupId>
+                                <artifactId>taglibs-standard-impl</artifactId>
+                            </exclusion>
+                        </exclusions>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
