--- a/message-resource-files/message-resource-struts/pom.xml
+++ b/message-resource-files/message-resource-struts/pom.xml
@@ -8,7 +8,8 @@
     <parent>
         <groupId>org.fp024.struts2.study</groupId>
         <artifactId>struts2-study-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+		<version>1.0-SNAPSHOT</version>
+		<relativePath>../../struts2-study-parent/pom.xml</relativePath>
     </parent>
 
     <artifactId>message-resource-struts</artifactId>
