unit-testing 예제 프로젝트 커스텀 변경한 JUnit 5 플러그인에 맞게 수정해서 반영

--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -63,7 +63,7 @@
     <!-- 17. 인터셉터 소개 -->
     <!-- // TODO -->
     <!-- 18. 단위 테스트 -->
-    <!-- // TODO -->
+    <module>../unit-testing/unit-testing-struts</module>
     <!-- 19. HTTP 세션 -->
     <!-- // TODO -->
     <!-- 20. Preparable 인터페이스 -->
