--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -65,7 +65,7 @@
     <!-- 18. 단위 테스트 -->
     <module>../unit-testing/unit-testing-struts</module>
     <!-- 19. HTTP 세션 -->
-    <!-- // TODO -->
+    <module>../http-session/http-session-struts</module>
     <!-- 20. Preparable 인터페이스 -->
     <!-- // TODO -->
     <!-- 21. 파라미터 제외 -->
