인터셉터 튜토리얼 진행중
Struts2 프로젝트에 JPA + Hibernate + HSQLDB 연동되는지 해보고 싶어서 인터셉터 튜토리얼에 해당 내용들을 붙여봄. 잘 동작 하였다.
LocalDateTime 날짜 고정 때문에 mockito-inline을 사용해봤는데.. 꽤나 훌륭했다.
그외 번역 약간 수정...

--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -60,8 +60,8 @@
     <module>../spring-and-struts-2/spring-struts</module>
     <!-- 16. 어노테이션 -->
     <!-- // TODO -->
-    <!-- 17. 인터셉터 소개 -->
-    <!-- // TODO -->
+    <!-- 17. 인터셉터 입문 -->
+    <module>../introducing-interceptors/interceptors-struts</module>
     <!-- 18. 단위 테스트 -->
     <module>../unit-testing/unit-testing-struts</module>
     <!-- 19. HTTP 세션 -->
