FlexJSON 예제 프로젝트 작성
자동으로 찾는 옵션이 있는지는 모르겠는데... FlexJSON에서 도메인의 객체형 필드를 포함하지 않으면 직렬화 대상에 포함하지 않은 점이 가장 특이했다.

--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -72,6 +72,11 @@
     <!-- // TODO -->
     <!-- 22. JasperReports 튜토리얼 -->
     <!-- // TODO -->
+    <!-- 23. JSON 튜토리얼 - FlexJSON 예제 -->
+    <module>../json/json-customize-flexjson-struts</module>
+    <!-- 24. JSON 튜토리얼 - Jackson 예제 -->
+    <module>../json/json-customize-jackson-struts</module>
+    
   </modules>
 
   <dependencyManagement>
