--- a/json/json-customize-flexjson-struts/pom.xml
+++ b/json/json-customize-flexjson-struts/pom.xml
@@ -22,6 +22,7 @@
   <properties>
     <flexjson.version>3.3</flexjson.version>
     <spring.platformVersion>5.2.18.RELEASE</spring.platformVersion>
+    <mockito.version>4.1.0</mockito.version>
   </properties>
 
   <dependencies>
@@ -75,5 +76,20 @@
       <version>${spring.platformVersion}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-inline</artifactId>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+
   </dependencies>
 </project>
