IntelliJ가 pom.xml의 name 노드의 값으로 메타파일을 생성하는 문제확인
name 노드 값에 :가 포함되어있는데, 이를 기반으로 IntelliJ가 메타 파일 이름으로 사용하고 파일을 만들려고해서,
프로젝트 로딩이 안된다. 그래서 : 문자를 - 로 변경했다.

--- a/spring-and-struts-2/spring-struts/pom.xml
+++ b/spring-and-struts-2/spring-struts/pom.xml
@@ -15,7 +15,7 @@
   <artifactId>spring-struts</artifactId>
   <packaging>war</packaging>
 
-  <name>${project.artifactId} : Struts 2 Study Maven Webapp</name>
+  <name>${project.artifactId} - Struts 2 Study Maven Webapp</name>
   <url>https://github.com/fp024/struts2-study/tree/master/spring-and-struts-2</url>
 
   <properties>
