--- a/coding-actions/coding-actions-struts/pom.xml
+++ b/coding-actions/coding-actions-struts/pom.xml
@@ -15,7 +15,7 @@
   <artifactId>coding-actions-struts</artifactId>
   <packaging>war</packaging>
 
-  <name>${project.artifactId} : Struts 2 Study Maven Webapp</name>
+  <name>${project.artifactId} - Struts 2 Study Maven Webapp</name>
   <url>https://github.com/fp024/struts2-study/tree/master/coding-actions</url>
 
 </project>
