--- a/debugging-struts/debugging-struts/pom.xml
+++ b/debugging-struts/debugging-struts/pom.xml
@@ -32,6 +32,6 @@
     </dependency>
   </dependencies>
 
-  <name>${project.artifactId} : Struts 2 Study Maven Webapp</name>
+  <name>${project.artifactId} - Struts 2 Study Maven Webapp</name>
   <url>https://github.com/fp024/struts2-study/tree/master/debugging-struts</url>
 </project>
