--- a/exception-handling/exception-handling-struts/pom.xml
+++ b/exception-handling/exception-handling-struts/pom.xml
@@ -15,6 +15,6 @@
   <artifactId>exception-handling-struts</artifactId>
   <packaging>war</packaging>
 
-  <name>${project.artifactId} : Struts 2 Study Maven Webapp</name>
+  <name>${project.artifactId} - Struts 2 Study Maven Webapp</name>
   <url>https://github.com/fp024/struts2-study/tree/master/exception-handling</url>
 </project>
