--- a/form-tags/form-tags-struts/pom.xml
+++ b/form-tags/form-tags-struts/pom.xml
@@ -16,7 +16,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>${project.artifactId} : Struts 2 Study Maven Webapp</name>
+  <name>${project.artifactId} - Struts 2 Study Maven Webapp</name>
   <url>https://github.com/fp024/struts2-study/tree/master/form-tags</url>
 
   <properties>
