--- a/form-validation-using-xml/form-xml-validation-struts/pom.xml
+++ b/form-validation-using-xml/form-xml-validation-struts/pom.xml
@@ -15,7 +15,7 @@
   <artifactId>form-xml-validation-struts</artifactId>
   <packaging>war</packaging>
 
-  <name>${project.artifactId} : Struts 2 Study Maven Webapp</name>
+  <name>${project.artifactId} - Struts 2 Study Maven Webapp</name>
   <url>https://github.com/fp024/struts2-study/tree/master/form-validation-using-xml</url>
 
   <properties>
