--- a/hello-world-using-struts-2/helloworld-struts/pom.xml
+++ b/hello-world-using-struts-2/helloworld-struts/pom.xml
@@ -15,7 +15,7 @@
   <artifactId>helloworld-struts</artifactId>
   <packaging>war</packaging>
 
-  <name>${project.artifactId} : Struts 2 Study Maven Webapp</name>
+  <name>${project.artifactId} - Struts 2 Study Maven Webapp</name>
   <url>https://github.com/fp024/struts2-study/tree/master/hello-world-using-struts-2</url>
 
 </project>
