--- a/http-session/http-session-struts/pom.xml
+++ b/http-session/http-session-struts/pom.xml
@@ -15,7 +15,7 @@
   <artifactId>http-session-struts</artifactId>
   <packaging>war</packaging>
 
-  <name>${project.artifactId} : Struts 2 Study Maven Webapp</name>
+  <name>${project.artifactId} - Struts 2 Study Maven Webapp</name>
   <url>https://github.com/fp024/struts2-study/tree/master/http-session</url>
 
   <properties>
