--- a/json/json-customize-flexjson-struts/pom.xml
+++ b/json/json-customize-flexjson-struts/pom.xml
@@ -15,7 +15,7 @@
   <artifactId>json-customize-flexjson-struts</artifactId>
   <packaging>war</packaging>
 
-  <name>${project.artifactId} : Struts 2 Study Maven Webapp</name>
+  <name>${project.artifactId} - Struts 2 Study Maven Webapp</name>
   <url>https://github.com/fp024/struts2-study/tree/master/json</url>
 
   <properties>
