--- a/using-tags/using-tags-struts/pom.xml
+++ b/using-tags/using-tags-struts/pom.xml
@@ -16,6 +16,6 @@
   <artifactId>using-tags-struts</artifactId>
   <packaging>war</packaging>
 
-  <name>${project.artifactId} : Struts 2 Study Maven Webapp</name>
+  <name>${project.artifactId} - Struts 2 Study Maven Webapp</name>
   <url>https://github.com/fp024/struts2-study/tree/master/using-tags</url>
 </project>
