--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -67,7 +67,7 @@
     <!-- 19. HTTP 세션 -->
     <module>../http-session/http-session-struts</module>
     <!-- 20. Preparable 인터페이스 -->
-    <!-- // TODO -->
+    <module>../preparable-interface/preparable-interface-struts</module>
     <!-- 21. 파라미터 제외 -->
     <!-- // TODO -->
     <!-- 22. JasperReports 튜토리얼 -->
