--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -71,7 +71,7 @@
     <!-- 21. 파라미터 제외 -->
     <module>../exclude-parameters/exclude-parameters-struts</module>
     <!-- 22. JasperReports 튜토리얼 -->
-    <!-- // TODO -->
+    <module>../jasper-reports-tutorial/jasper-reports-struts</module>
     <!-- 23. JSON 튜토리얼 - FlexJSON 예제 -->
     <module>../json/json-customize-flexjson-struts</module>
     <!-- 24. JSON 튜토리얼 - Jackson 예제 -->
