--- a/annotations/annotations-struts/pom.xml
+++ b/annotations/annotations-struts/pom.xml
@@ -13,17 +13,7 @@
   <packaging>war</packaging>
   <name>${project.artifactId} - Struts 2 Study Maven Webapp</name>
   <url>https://github.com/fp024/struts2-study/tree/master/annotations</url>
-  
-  <properties>
-    <spring.platformVersion>5.2.18.RELEASE</spring.platformVersion>
-    <hikaricp.version>5.0.0</hikaricp.version>
-    <hibernate.version>5.6.2.Final</hibernate.version>
-    <hsqldb.version>2.6.1</hsqldb.version>
-    <guava.version>31.0.1-jre</guava.version>
-    <mockito.version>4.1.0</mockito.version>
-    <hamcrest.version>2.2</hamcrest.version>
-  </properties>
-  
+
   <!-- struts2-spring-plugin 에 의해 의존성이 걸리는 Spring 모듈들의 버전관리를 위해 추가 -->
   <dependencyManagement>
     <dependencies>
@@ -63,7 +53,7 @@
     <dependency>
       <groupId>javax.annotation</groupId>
       <artifactId>javax.annotation-api</artifactId>
-      <version>1.3.2</version>
+      <version>${javax.annotation-api.version}</version>
     </dependency>
 
     <dependency>
