--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -15,13 +15,34 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
+    <java.version>11</java.version>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
 
     <struts2.version>2.5.28.2</struts2.version>
+    <spring.platformVersion>5.2.19.RELEASE</spring.platformVersion>
+    
     <log4j2.version>2.17.0</log4j2.version>
+    
+    <jackson.version>2.13.1</jackson.version>
+    <jackson-databind.version>${jackson.version}</jackson-databind.version>
+    <flexjson.version>3.3</flexjson.version>
+
+    <hikaricp.version>5.0.0</hikaricp.version>
+    <hibernate.version>5.6.2.Final</hibernate.version>
+    <hsqldb.version>2.6.1</hsqldb.version>
+
+    <guava.version>31.0.1-jre</guava.version>
+
+    <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+    
+    <jasperreports.version>6.18.1</jasperreports.version>
+
     <lombok.version>1.18.22</lombok.version>
+
     <junit.version>5.8.2</junit.version>
+    <mockito.version>4.2.0</mockito.version>
+    <hamcrest.version>2.2</hamcrest.version>
 
     <jetty.version>10.0.7</jetty.version>
   </properties>
