--- a/wildcard-method-selection/wildcard-method-selection-struts/pom.xml
+++ b/wildcard-method-selection/wildcard-method-selection-struts/pom.xml
@@ -18,16 +18,6 @@
   <name>${project.artifactId} - Struts 2 Study Maven Webapp</name>
   <url>https://github.com/fp024/struts2-study/tree/master/wildcard-method-selection</url>
 
-  <properties>
-    <spring.platformVersion>5.2.18.RELEASE</spring.platformVersion>
-    <hikaricp.version>5.0.0</hikaricp.version>
-    <hibernate.version>5.6.1.Final</hibernate.version>
-    <hsqldb.version>2.6.1</hsqldb.version>
-    <guava.version>31.0.1-jre</guava.version>
-    <mockito.version>4.1.0</mockito.version>
-    <hamcrest.version>2.2</hamcrest.version>
-  </properties>
-
   <!-- struts2-spring-plugin 에 의해 의존성이 걸리는 Spring 모듈들의 버전관리를 위해 추가 -->
   <dependencyManagement>
     <dependencies>
@@ -51,7 +41,7 @@
     <dependency>
       <groupId>javax.annotation</groupId>
       <artifactId>javax.annotation-api</artifactId>
-      <version>1.3.2</version>
+      <version>${javax.annotation-api.version}</version>
     </dependency>
 
     <dependency>
@@ -63,7 +53,7 @@
     <dependency>
       <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
-      <version>2.6.1</version>
+      <version>${hsqldb.version}</version>
     </dependency>
 
     <!-- Java 11 환경에서 최신 5.x.x 버전이 호환가능함. -->
