--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -20,7 +20,7 @@
     <maven.compiler.target>${java.version}</maven.compiler.target>
 
     <struts2.version>2.5.29</struts2.version>
-    <spring.platformVersion>5.2.19.RELEASE</spring.platformVersion>
+    <spring.platformVersion>5.3.15</spring.platformVersion>
     
     <log4j2.version>2.17.1</log4j2.version>
     
@@ -29,7 +29,7 @@
     <flexjson.version>3.3</flexjson.version>
 
     <hikaricp.version>5.0.1</hikaricp.version>
-    <hibernate.version>5.6.4.Final</hibernate.version>
+    <hibernate.version>5.6.5.Final</hibernate.version>
     <hsqldb.version>2.6.1</hsqldb.version>
 
     <guava.version>31.0.1-jre</guava.version>
@@ -41,7 +41,7 @@
     <lombok.version>1.18.22</lombok.version>
 
     <junit.version>5.8.2</junit.version>
-    <mockito.version>4.3.0</mockito.version>
+    <mockito.version>4.3.1</mockito.version>
     <hamcrest.version>2.2</hamcrest.version>
 
     <jetty.version>10.0.7</jetty.version>
