--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -15,7 +15,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>11</java.version>
+    <java.version>17</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
 
@@ -43,6 +43,9 @@
     <junit.version>5.8.2</junit.version>
     <mockito.version>4.3.1</mockito.version>
     <hamcrest.version>2.2</hamcrest.version>
+
+    <!-- struts2-convention-plugin에서 Java 17 바이트 코드 해석을 못해서, 버전을 올렸다. -->
+    <asm.version>9.2</asm.version>
 
     <jetty.version>10.0.8</jetty.version>
   </properties>
