--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -24,8 +24,8 @@
     
     <log4j2.version>2.17.2</log4j2.version>
     
-    <jackson.version>2.13.2</jackson.version>
-    <jackson-databind.version>2.13.2.2</jackson-databind.version>
+    <jackson.version>2.13.3</jackson.version>
+    <jackson-databind.version>${jackson.version}</jackson-databind.version>
     <!-- 
       Struts에서 Jackson Databind를 따로 프로퍼티를 땃는지 이해가 안갔는데, 
       jackson-databind 만 마이크로 보안패치가 잦은 편이여서, 따로 딴 것 같다.
@@ -33,7 +33,7 @@
     <flexjson.version>3.3</flexjson.version>
 
     <hikaricp.version>5.0.1</hikaricp.version>
-    <hibernate.version>5.6.8.Final</hibernate.version>
+    <hibernate.version>5.6.9.Final</hibernate.version>
     <hsqldb.version>2.6.1</hsqldb.version>
 
     <guava.version>31.1-jre</guava.version>
