--- a/plugins/struts2-junit5-user-custom-plugin/pom.xml
+++ b/plugins/struts2-junit5-user-custom-plugin/pom.xml
@@ -37,6 +37,11 @@
     <junit.version>5.8.2</junit.version>
     <log4j2.version>2.17.2</log4j2.version>
     <asm.version>9.3</asm.version>
+
+    <!-- Maven Plugin 버전 -->
+    <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+    <maven-toolchains-plugin.version>3.0.0</maven-toolchains-plugin.version>
   </properties>
 
   <!-- struts2-spring-plugin 에 의해 의존성이 걸리는 Spring 모듈들의 버전관리를 위해 추가 -->
@@ -185,12 +190,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.10.1</version>
+          <version>${maven-compiler-plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.2</version>
+          <version>${maven-surefire-plugin.version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -198,7 +203,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-toolchains-plugin</artifactId>
-        <version>3.0.0</version>
+        <version>${maven-toolchains-plugin.version}</version>
         <executions>
           <execution>
             <goals>
