--- a/jasper-reports-tutorial/jasper-reports-struts/pom.xml
+++ b/jasper-reports-tutorial/jasper-reports-struts/pom.xml
@@ -17,6 +17,10 @@
     struts2-spring-plugin 에서 적절한 Spring 버전을 가져오긴하지만,
     이 테스트 프로젝트에서는 Spring 버전을 최신으로 관리해보기 위해서 BOM 프로젝트를 추가했습니다.
   -->
+  <!--
+     Although it gets the appropriate Spring version from struts2-spring-plugin ,
+     In this test project, a BOM project was added to keep the Spring version up to date.
+  -->
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -55,31 +59,6 @@
       <groupId>javax.annotation</groupId>
       <artifactId>javax.annotation-api</artifactId>
       <version>${javax.annotation-api.version}</version>
-    </dependency>
-    <!-- JUnit 5를 사용하기 위해 https://github.com/apache/struts/tree/master/plugins/junit 프로젝트를 수정했다. -->
-    <dependency>
-      <groupId>org.fp024.struts2.study</groupId>
-      <artifactId>struts2-junit5-user-custom-plugin</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-junit-jupiter</artifactId>
-      <version>${mockito.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-inline</artifactId>
-      <version>${mockito.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
-      <version>${assertj.version}</version>
-      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
